--- a/Diamon/app/src/main/res/layout/activity_register.xml
+++ b/Diamon/app/src/main/res/layout/activity_register.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_margin="10dp"
+        android:background="@drawable/bg5"
         android:weightSum="7"
         >
         <TextView
