--- a/Diamon/app/src/main/res/layout/activity_send.xml
+++ b/Diamon/app/src/main/res/layout/activity_send.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/be"
+            android:background="@drawable/bg1"
             android:weightSum="9">
 
             <TextView
