--- a/Diamon/app/src/main/res/layout/add_popup.xml
+++ b/Diamon/app/src/main/res/layout/add_popup.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/be"
+    android:background="@drawable/bg5"
     android:layout_height="match_parent">
 
 
@@ -18,10 +18,10 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:layout_gravity="center"
-            app:srcCompat="@drawable/ic_local"
+            app:srcCompat="@drawable/lg_blp"
             android:layout_marginTop="10dp"/>
 
         <TextView
