--- a/Diamon/app/src/main/res/menu/main_menu.xml
+++ b/Diamon/app/src/main/res/menu/main_menu.xml
@@ -15,10 +15,11 @@
             android:title="Send"
             android:icon="@drawable/ic_send">
         </item>
+        <!--
         <item android:id="@+id/withdrawal"
             android:title="withdrawal"
             android:icon="@drawable/ic_wallet">
-        </item>
+        </item>-->
         <item android:id="@+id/setting"
             android:title="Transactions"
             android:icon="@drawable/ic_cached">
@@ -30,11 +31,11 @@
         <item android:id="@+id/profile"
             android:title="Profile"
             android:icon="@drawable/ic_person">
-        </item>
+        </item><!--
         <item android:id="@+id/chat"
             android:title="Chat"
             android:icon="@drawable/ic_chat">
-        </item>
+        </item>-->
         <item android:id="@+id/logout"
             android:title="Logout"
             android:icon="@drawable/ic_logout">
